# ExamPrep

./: .gitignore
Software Maintenance/: .dockerignore  .env.example  .gitignore  DOCUMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Software Maintenance/app/: DOCUMENT.md  chunker.py  embedder.py  extract.py  ingest.py  lectures.py  main.py  quiz.py  validate_mcqs.py
Software Maintenance/app/static/: DOCUMENT.md  common.js  index.html  lookup.js  quiz.js  style.css
Software Maintenance/app/tests/: DOCUMENT.md  test_chunker.py  test_extract.py  test_ingest.py  test_lectures.py  test_quiz.py  test_search.py  test_validate.py
Software Maintenance/data/: DOCUMENT.md
Software Maintenance/data/guides/: 00-overview.md  90-exam-what-to-expect.md  91-exam-model-answers.md  92-exam-copy-paste-library.md  93-lab-deep-dives-1.md  94-lab-deep-dives-2.md  95-diagram-index.md  DOCUMENT.md  lecture-01-introduction-version-control.md  lecture-02-software-change-concept-location.md  lecture-03-impact-analysis-processes-ci.md  lecture-04-refactoring-maintainable-code.md  (+6 more)
Software Maintenance/diagrams/: DOCUMENT.md  bdd-given-when-then.drawio  change-request-flow.drawio  ci-pipeline.drawio  clean-architecture-rings.drawio  concept-location-process.drawio  git-four-areas.drawio  github-flow-branching.drawio  impact-analysis-propagation.drawio  refactoring-workflow.drawio  software-change-process.drawio  testing-pyramid-aaa.drawio
Software Maintenance/notes-pdf/: DOCUMENT.md
Software Maintenance/scripts/: DOCUMENT.md  export_pdfs.py
(+400 files in other folders)
