# Project tooling config — Ruff (lint + format) and pytest. Python 3.11, matching
# ExamPrep/cyper. This file establishes the Phase-0 lint/test conventions; cyper
# itself ran on defaults, so we make the conventions explicit here for consistency.

[project]
name = "software-maintenance-exam-prep"
version = "0.1.0"
description = "Offline study-prep web app for the SB5-MAI Software Maintenance course (semantic Lookup + interactive Quiz)."
requires-python = "==3.11.*"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]
extend-exclude = ["data/chroma_db", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
# A pragmatic, not-pedantic set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade. Mirrors common FastAPI project hygiene.
select = ["E", "F", "I", "B", "C4", "UP", "W"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # FastAPI uses function calls (Query(...), Depends(...)) in defaults by design
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"
